fix: adjust body font size for improved readability

--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ body {
   margin: 0;
   text-align: center;
   font-family: "Montserrat", "Kumbh", sans-serif;
-  font-size: clamp(1.5rem, 3.4vw, 1.7rem);
+  font-size: clamp(1.25rem, 4.5vw, 1.7rem);
   line-height: 1.1;
   font-weight: 500;
 }
